# catzilla

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ASYNC_BRIDGE_WINDOWS_FIX.md  ASYNC_TEST_STABILIZATION_REPORT.md  AUTOMATIC_SIGNAL_HANDLING_COMPLETE.md  BENCHMARK_SUCCESS_REPORT.md  BUILD_DEPLOY_VALIDATION_COMPLETE.md  CATZILLA_DOCUMENTATION_RESTRUCTURING_PLAN.md  CATZILLA_V0.2.0_FEATURE_COMPLETION_REPORT.md  CI_FIX_COMPLETE_SUMMARY.md  CI_FIX_PYTHON312_PKG_RESOURCES.md  CLAUDE.md  CMakeLists.txt  COMPREHENSIVE_BENCHMARKING_SYSTEM.md  COMPREHENSIVE_E2E_TESTING_ACHIEVEMENT_REPORT.md  COMPREHENSIVE_PERFORMANCE_ANALYSIS.md  CONTRIBUTING.md  DOCS_VERIFICATION_FINAL.md  DOCS_VERIFICATION_REPORT.md  DOCUMENTATION_CORRECTION_SUMMARY.md  DOCUMENTATION_FIX_REPORT.md  FAKE_API_CLEANUP_COMPLETE.md  FASTAPI_MIDDLEWARE_COMPLETE.md  HEAD_METHOD_IMPLEMENTATION_COMPLETE.md  HTTP_STREAMING_COMPLETION_REPORT.md  INTERMITTENT_TEST_FAILURES_FIX.md  JEMALLOC_CI_FIXES.md  JEMALLOC_PRELOADING_CLEANUP.md  LICENSE  MANIFEST.in  MEMORY_LEAK_DETECTION_COMPLETE.md  MIDDLEWARE_DOCUMENTATION_COMPLETE.md  MIDDLEWARE_DOCUMENTATION_FIXES.md  Makefile  PERFORMANCE_REPORT.md  PERFORMANCE_REPORT_v0.1.0.md  PERFORMANCE_REPORT_v0.2.0.md  PERFORMANCE_REPORT_v0.2.2.md  PHASE5_COMPLETION_SUMMARY.md  (+137 more)
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: CATZILLA_PERFORMANCE_REPORT.md  README.md  VALIDATION_BENCHMARK_REPORT.md  background_task_benchmarks.py  dependency_injection_benchmarks.py  enhanced_transparent_runner.py  quick_feature_bench.py  run_all.sh  run_benchmarks.py  run_enhanced_benchmarks.py  run_enhanced_feature_benchmarks.sh  run_feature_benchmarks.py  run_feature_benchmarks.sh  shared_endpoints.py  test_all_features.py  visualize_results.py  wrk_advanced_user.lua  wrk_product.lua  wrk_simple_user.lua
benchmarks/results/: async-operations_performance_report.md  background-tasks_performance_report.md  basic_performance_report.md  benchmark_summary.json  benchmark_summary.md  di_performance_report.md  file-operations_performance_report.md  middleware_performance_report.md  performance_report.md  real-world_performance_report.md  sqlalchemy-di_performance_report.md  system_info.md  transparent_performance_report.md  validation_performance_report.md
benchmarks/servers/: catzilla_server.py  django_server.py  fastapi_server.py  flask_server.py
benchmarks/shared/: __init__.py  background_endpoints.py  benchmarks_config.py  endpoints.py  file_endpoints.py  realworld_endpoints.py  validation_endpoints.py
benchmarks/tools/: multi_worker_proxy.py  system_info.py  transparent_visualizer.py  (+1 more)
benchmarks_old/: run_all.sh  test_feature_endpoints.py
cmake/: DetectJemallocPrefix.cmake
docker/: README.md  docker-compose.multiplatform.yml  docker-compose.yml  docker-dev.sh
docs/: BACKGROUND_TASK_SYSTEM.md  DEPENDENCY_INJECTION_GUIDE.md  DOCKER_TESTING_GUIDE.md  MIDDLEWARE_CONTEXT_GUIDE.md  Makefile  PYPI_SETUP.md  README.md  STARTUP_BANNER_SUCCESS.md  STATUS.md  SYSTEM_COMPATIBILITY.md  VERSION_MANAGEMENT.md  advanced.rst  advanced_di_guide.md  auto-validation-architecture.md  auto-validation-examples.md  auto-validation-index.md  auto-validation-quick-reference.md  auto-validation.md  build_docs.py  c-accelerated-routing.md  conf.py  cookies-and-headers.md  dependency_injection_overview.md  di_documentation_summary.md  di_use_cases.md  error-handling.md  examples.md  features.md  file-upload-system.md  getting-started.md  index.rst  jemalloc_runtime_support.md  jemalloc_troubleshooting.md  logging_quick_reference.md  middleware.md  middleware_guide.md  middleware_overview.md  middleware_user_guide.md  migration-fastapi.md  migration_from_fastapi.md  (+20 more)
docs_new/: DOCUMENTATION_PROGRESS.md  conf.py  first-steps.md  index.md  index.md.backup  installation.md  quick-start.md
examples/: README.md  async_sync_example.py  ecommerce_api_example.md  error_handling_demo.py  examples_passed.txt  per_route_middleware_advanced.py  per_route_middleware_basic.py  production_banner_demo.py  smart_cache_demo.py  startup_banner_demo.py  streaming_example.py  test_advanced_routing.py
examples_old/: README.md  smart_cache_demo.py  upload_examples.py
plan/: CATZILLA_V0.2.0_ASYNC_SYNC_SUPPORT_PLAN.md  FEATURE_BASED_BENCHMARKING_PLAN.md  REVOLUTIONARY_FILE_UPLOAD_SYSTEM.md  background_task_system_engineering_plan.md  c_native_static_file_server_plan.md  comprehensive_benchmarking_plan.md  dependency_injection_engineering_plan.md  http_streaming_focused_plan.md  smart_caching_system_plan.md  startup_banner_and_logging_plan.md  startup_banner_design.md  streaming_implementation_roadmap.md  streaming_websocket_engineering_plan.md  zero_allocation_middleware_system_plan.md
scripts/: build.bat  build.sh  build_jemalloc.bat  build_jemalloc.sh  build_wheels_local.bat  build_wheels_local.sh  bump_version.sh  docker_manager.sh  docker_test_report.sh  jemalloc_helper.bat  jemalloc_helper.py  platform_compat.py  release.py  run_example.bat  run_example.sh  run_tests.bat  run_tests.sh  setup_docker_testing.sh  simulate_ci.sh  test_ci_exit.bat  test_docker_full.sh  test_docker_quick.sh  test_jemalloc_detection.bat  test_windows_emoji.bat  test_windows_emoji.py  test_windows_wheels.ps1  verify_docker_setup.sh  verify_segfault_fix.py  verify_segfault_fix_windows.bat  version.py
summary/: AUTO_VALIDATION_SUCCESS_REPORT.md  BEAUTIFUL_DEBUG_LOGGING_SYSTEM.md  C_NATIVE_FILE_UPLOAD_SYSTEM_COMPLETE.md  DEPENDENCY_INJECTION_DOCUMENTATION_COMPLETE.md  JEMALLOC_CI_INTEGRATION.md  JEMALLOC_INTEGRATION_SUMMARY.md  ULTRA_FAST_VALIDATION_ENGINE_FEATURES.md  WINDOWS_CI_COMPATIBILITY_FIXES.md  ZERO_ALLOCATION_MIDDLEWARE_SYSTEM_COMPLETE.md  background_task_system_implementation.md  c_native_static_file_server_implementation.md  ci_fixes_summary.md  http_streaming_implementation_summary.md  smart_caching_final_status.md  test_organization_completion.md  v0_2_0_status_update.md
tests/: README.md  test_request.py  test_response_builder.py  test_smart_cache.py  test_upload_system.py
website/: index.html  robots.txt  sitemap.xml
(+389 files in other folders)
